--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
             </div>
         </header>
         
+        <section class="playlist-menu">
+            <button class="playlist-button" data-playlist="A">Playlist A</button>
+            <button class="playlist-button" data-playlist="B">Playlist B</button>
+            <button class="playlist-button" data-playlist="C">Playlist C</button>
+            <button class="playlist-button" data-playlist="D">Playlist D</button>
+            <button class="playlist-button" data-playlist="E">Playlist E</button>
+        </section>
+
         <section class="track-list">
             <h2>Playlist</h2>
             <ul id="track-list">
-                <!-- Existing song list -->
+                <!-- Songs will be rendered here -->
             </ul>
             <div class="pagination-controls">
                 <button id="prev-page" disabled>Previous</button>
